fix(overflow): fix overflow issue

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -6,7 +6,6 @@
   height: fit-content;
   max-height: 90vh;
   min-height: 5em;
-  overflow-y: scroll;
   padding: 0 5px;
   width: 100%;
 }
